--- a/app/src/main/assets/style.css
+++ b/app/src/main/assets/style.css
@@ -74,6 +74,7 @@ select:active {
 	background: white;
 	display: none;
 	z-index: 1;
+	overflow-y: scroll;
 }
 
 .popup .close {
@@ -107,7 +108,7 @@ select:active {
 }
 
 #settings {
-	width: 85%;
+	width: 87%;
 	height: 100%;
 	position: absolute;
 	top: 0px;
@@ -115,6 +116,7 @@ select:active {
 	background-color: white;
 	border-right: 1px solid black;
 	display: none;
+	overflow: scroll;
 }
 
 .large {
@@ -123,8 +125,8 @@ select:active {
 }
 
 #search {
-	width: 90%;
-	height: 30px;
+	width: calc(90% - 80px);
+	height: 33px;
 	outline: none;
 	border-radius: 4px;
 	border: 1px solid grey;
@@ -155,6 +157,11 @@ select:active {
 
 #translation {
 	width: auto;
+	margin-bottom: 5px;
+}
+
+#hehe {
+	user-select: none;
 }
 
 #kjvOnline {
@@ -166,4 +173,36 @@ select:active {
 	overflow: scroll;
 	display: none;
 	background: white;
+}
+
+.button.bg {
+	background: #426eb7;
+	color: white;
+	padding: 7px 7px;
+	border-radius: 5px;
+	border: 1px solid #3166bf;
+}
+
+.button.bg:active {
+	box-shadow: inset 0px 0px 400px 110px rgba(0, 0, 0, .1);
+}
+
+#favorite {
+	width: 90%;
+	height: auto;
+	border-bottom: 1px solid black;
+	align-content: left;
+	display: inline-block;
+	margin-bottom: 5px;
+}
+#favorite p {
+	float: left;
+}
+
+.text {
+	margin: 0px;
+}
+
+.text.big {
+	font-size: 25px;
 }
